# fastx402

./: .gitignore  README.md  pyproject.toml  setup.py
example/: README.md  client_cli.py  main.py  server.py
fastx402/: __init__.py  client.py  decorators.py  fastapi_server_wrapper.py  fastmcp_client_wrapper.py  fastmcp_server_wrapper.py  httpx_wrapper.py  requests_wrapper.py  server.py  types.py  utils.py
fastx402/client/: __init__.py  ws_server.py
fastx402/client/waas/: __init__.py  base.py  config.py  privy.py  signature.py
fastx402/waas/: __init__.py  base.py  privy.py
site/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
site/app/: layout.tsx  page.tsx
site/components/: footer.tsx  nav.tsx
tests/: __init__.py  test_client.py  test_httpx_wrapper.py  test_requests_wrapper.py  test_server.py  test_utils.py
